@@ -1,4 +1,8 @@
 ===== SVN trunk  =====
+11/12/2010
+- bugfix nested block tags in template inheritance child templates did not work correctly
+- bugfix {$smarty.current_dir} in child template did not point to dir of child template
+
 06/12/2010
 - bugfix getTemplateVars() should return 'null' instead dropping E_NOTICE on an unassigned variable
 
